feat: add donatepay integration (#317)
* feat: add donatepay integration

* upd rageywide
